No icons skin (bleah!).

--- a/src/com/axiastudio/zoefx/core/resources/i18n_en.properties
+++ b/src/com/axiastudio/zoefx/core/resources/i18n_en.properties
@@ -8,5 +8,19 @@ toolbar.save = Save
 toolbar.cancel = Cancel
 toolbar.refresh = refresh
 toolbar.search = Search
-toolbar.info = Info
+toolbar.info = Information
 toolbar.console = Console
+toolbar.open = Open
+toolbar.first_short = First
+toolbar.previous_short = Prev
+toolbar.next_short = Next
+toolbar.last_short = Last
+toolbar.add_short = Add
+toolbar.delete_short = Del
+toolbar.save_short = Save
+toolbar.cancel_short = Canc
+toolbar.refresh_short = refr
+toolbar.search_short = Search
+toolbar.info_short = Info
+toolbar.console_short = Console
+toolbar.open_short = Open
