--- a/src/com/axiastudio/zoefx/core/resources/i18n_it.properties
+++ b/src/com/axiastudio/zoefx/core/resources/i18n_it.properties
@@ -10,3 +10,17 @@ toolbar.refresh = Aggiorna
 toolbar.search = Cerca
 toolbar.info = Informazioni
 toolbar.console = Console
+toolbar.open = Apri
+toolbar.first_short = primo
+toolbar.previous_short = prec
+toolbar.next_short = succ
+toolbar.last_short = ultimo
+toolbar.add_short = aggiungi
+toolbar.delete_short = cancella
+toolbar.save_short = registra
+toolbar.cancel_short = annulla
+toolbar.refresh_short = aggiorna
+toolbar.search_short = cerca
+toolbar.info_short = info
+toolbar.console_short = console
+toolbar.open_short = apri
