Print icons and marker interface.

--- a/src/com/axiastudio/zoefx/core/resources/i18n_en.properties
+++ b/src/com/axiastudio/zoefx/core/resources/i18n_en.properties
@@ -6,6 +6,7 @@ toolbar.add = Add
 toolbar.delete = Delete
 toolbar.save = Save
 toolbar.cancel = Cancel
+toolbar.print = Print
 toolbar.refresh = refresh
 toolbar.search = Search
 toolbar.info = Information
@@ -19,6 +20,7 @@ toolbar.add_short = Add
 toolbar.delete_short = Del
 toolbar.save_short = Save
 toolbar.cancel_short = Canc
+toolbar.print_short = Print
 toolbar.refresh_short = refr
 toolbar.search_short = Search
 toolbar.info_short = Info
