--- a/src/com/axiastudio/zoefx/core/resources/i18n_it.properties
+++ b/src/com/axiastudio/zoefx/core/resources/i18n_it.properties
@@ -6,6 +6,7 @@ toolbar.add = Aggiungi
 toolbar.delete = Cancella
 toolbar.save = Registra
 toolbar.cancel = Annulla
+toolbar.print = Stampa
 toolbar.refresh = Aggiorna
 toolbar.search = Cerca
 toolbar.info = Informazioni
@@ -20,6 +21,7 @@ toolbar.delete_short = cancella
 toolbar.save_short = registra
 toolbar.cancel_short = annulla
 toolbar.refresh_short = aggiorna
+toolbar.print_short = Stampa
 toolbar.search_short = cerca
 toolbar.info_short = info
 toolbar.console_short = console
