Report form layout and translation.

--- a/src/com/axiastudio/zoefx/core/resources/i18n_en.properties
+++ b/src/com/axiastudio/zoefx/core/resources/i18n_en.properties
@@ -26,3 +26,8 @@ toolbar.search_short = Search
 toolbar.info_short = Info
 toolbar.console_short = Console
 toolbar.open_short = Open
+
+report.title = Select report
+report.print_button = Print report
+report.export_to_pdf_button = Export to PDF
+report.save_as = Save as...
