--- a/src/com/axiastudio/zoefx/core/resources/i18n_it.properties
+++ b/src/com/axiastudio/zoefx/core/resources/i18n_it.properties
@@ -26,3 +26,8 @@ toolbar.search_short = cerca
 toolbar.info_short = info
 toolbar.console_short = console
 toolbar.open_short = apri
+
+report.title = Selezione report
+report.print_button = Stampa report
+report.export_to_pdf_button = Esporta in PDF
+report.save_as = Salva come...
