Toolbar layout in css.

--- a/src/com/axiastudio/zoefx/core/resources/i18n_en.properties
+++ b/src/com/axiastudio/zoefx/core/resources/i18n_en.properties
@@ -5,6 +5,7 @@ toolbar.last = Last
 toolbar.add = Add
 toolbar.delete = Delete
 toolbar.save = Save
+toolbar.accept = Accept
 toolbar.cancel = Cancel
 toolbar.print = Print
 toolbar.refresh = refresh
@@ -19,6 +20,7 @@ toolbar.last_short = Last
 toolbar.add_short = Add
 toolbar.delete_short = Del
 toolbar.save_short = Save
+toolbar.accept_short = Accept
 toolbar.cancel_short = Canc
 toolbar.print_short = Print
 toolbar.refresh_short = refr
