--- a/src/com/axiastudio/zoefx/core/resources/i18n_it.properties
+++ b/src/com/axiastudio/zoefx/core/resources/i18n_it.properties
@@ -5,6 +5,7 @@ toolbar.last = Ultimo
 toolbar.add = Aggiungi
 toolbar.delete = Cancella
 toolbar.save = Registra
+toolbar.accept = Conferma
 toolbar.cancel = Annulla
 toolbar.print = Stampa
 toolbar.refresh = Aggiorna
@@ -19,9 +20,10 @@ toolbar.last_short = ultimo
 toolbar.add_short = aggiungi
 toolbar.delete_short = cancella
 toolbar.save_short = registra
+toolbar.accept_short = conferma
 toolbar.cancel_short = annulla
 toolbar.refresh_short = aggiorna
-toolbar.print_short = Stampa
+toolbar.print_short = stampa
 toolbar.search_short = cerca
 toolbar.info_short = info
 toolbar.console_short = console
