Resources bundle to the search form.

--- a/src/com/axiastudio/zoefx/core/resources/i18n_en.properties
+++ b/src/com/axiastudio/zoefx/core/resources/i18n_en.properties
@@ -33,3 +33,5 @@ report.title = Select report
 report.print_button = Print report
 report.export_to_pdf_button = Export to PDF
 report.save_as = Save as...
+
+search.filters = Search filters
