--- a/src/com/axiastudio/zoefx/core/resources/i18n_it.properties
+++ b/src/com/axiastudio/zoefx/core/resources/i18n_it.properties
@@ -33,3 +33,5 @@ report.title = Selezione report
 report.print_button = Stampa report
 report.export_to_pdf_button = Esporta in PDF
 report.save_as = Salva come...
+
+search.filters = Filtri di ricerca
