Skin for the search form.

--- a/src/com/axiastudio/zoefx/core/resources/i18n_en.properties
+++ b/src/com/axiastudio/zoefx/core/resources/i18n_en.properties
@@ -35,3 +35,5 @@ report.export_to_pdf_button = Export to PDF
 report.save_as = Save as...
 
 search.filters = Search filters
+search.search=Search
+search.apply=Apply
