--- a/src/com/axiastudio/zoefx/core/resources/i18n_it.properties
+++ b/src/com/axiastudio/zoefx/core/resources/i18n_it.properties
@@ -35,3 +35,5 @@ report.export_to_pdf_button = Esporta in PDF
 report.save_as = Salva come...
 
 search.filters = Filtri di ricerca
+search.search = Cerca
+search.apply = Applica
